Provide a front door for reading declaration.
Provide a front door for reading declaration strings from
a command line argument or file source in either the old or
new declaration languages.

Refs #113677